--- a/ship.html
+++ b/ship.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <div id="stage">
-      <div id="car"></div>
+      <div class="meteor" id="meteor1"></div>
+      <div id="ship"></div>
     </div>
     <script src="js/jquery.js"></script>
-    <script src="js/old-car-script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
