--- a/ship.html
+++ b/ship.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<div><button id="btn-reset">Reset</button></div>
     <div id="stage">
       <div class="meteor" id="meteor1"></div>
       <div id="ship"></div>
