--- a/ship2.html
+++ b/ship2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="stage">
-      <div class="meteor" id="meteor1"></div>
+      <div class="meteor" id="meteor1"></div> <div class="meteor" id="meteor2"></div>
       <div id="ship"></div>
     </div>
     <script src="js/jquery.js"></script>
